--- a/app/src/main/res/layout/pendencia_item.xml
+++ b/app/src/main/res/layout/pendencia_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="@layout/activity_main"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/pendencia_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:background="@color/colorPrimary"
-        android:text="Hello"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        tools:text="Hello" />
 
 </LinearLayout>
