--- a/app/src/main/res/layout/pendencia_item.xml
+++ b/app/src/main/res/layout/pendencia_item.xml
@@ -1,17 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/card_view_bg"
     android:orientation="vertical"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    >
 
-    <TextView
-        android:id="@+id/pendencia_text"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:background="@color/colorPrimary"
-        tools:text="Hello" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_height="wrap_content">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/txt_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:textSize="24sp"
+            android:textColor="@android:color/white"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            tools:text="F" />
+
+        <TextView
+            android:id="@+id/pendencia_nome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="@color/darkerGrey"
+            android:layout_marginStart="16dp"
+            android:layout_alignTop="@id/txt_icon"
+            android:layout_toEndOf="@id/txt_icon"
+            tools:text="Facebook" />
+
+        <TextView
+            android:id="@+id/pendencia_info"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_below="@id/pendencia_nome"
+            android:layout_alignStart="@id/pendencia_nome"
+            android:textColor="@color/darkerGrey"
+            tools:text="Facebook facebook facebook facebook facebook facebook facebook" />
+
+
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
